--- a/password.html
+++ b/password.html
@@ -5,11 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        *{
+            box-sizing: border-box;
+            padding: 0;
+            margin: 0;
+        }
+        html{
+            font-size: 62.5%;
+        }
+        .login{
+            width: 100%;
+            height: 100vh;
+            display: grid;
+            place-items: center;
+        }
+        .form-container{
+            display: grid;
+            grid-template-rows: auto 1fr auto;
+            width: 30rem;
+        }
+        .logo {
+            width: 15rem;
+            margin-bottom: 4.8rem;
+            justify-self: center;
+            display: none;
+        }
+    </style>
 </head>
 <body>
     <div class="login">
         <div class="form-container">
-            <img src="" alt="logo" class="logo" />
+            <img src="./Platzi_YardSale_Logos/logo_yard_sale.svg" alt="logo" class="logo" />
 
             <h1 class="title">Create a new password</h1>
             <h2 class="subtitle">Enter a new password for your account</h2>
