--- a/password.html
+++ b/password.html
@@ -5,7 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Indie+Flower&family=Quicksand:wght@300;500;700&family=Shadows+Into+Light&family=Silkscreen&display=swap" rel="stylesheet">
     <style>
+        :root {
+           --very-light-pink: #767474;
+           --hospital-green: #acd9b2;
+           --text-input-field: #f7f7f7;
+           --white: #ffffff;
+           --black: #000000;
+           --sm: 1.4rem;
+           --md: 1.6rem;
+           --lg: 1.8rem;
+        }
+        body {
+            font-family: 'Quicksand', sans-serif;
+        }
         *{
             box-sizing: border-box;
             padding: 0;
@@ -31,6 +47,59 @@
             justify-self: center;
             display: none;
         }
+        .title {
+            font-size: var(--lg);
+            margin-bottom: 1.2rem;
+            text-align: center;
+        }
+        .subtitle {
+            color: var(--very-light-pink);
+            font-size: var(--md);
+            font-weight: 300;
+            margin-top: 0;
+            margin-bottom: 3.2rem;
+            text-align: center;
+        }
+        .form {
+            display: flex;
+            flex-direction: column;
+        }
+        .label {
+            font-size: var(--sm);
+            font-weight: bold;
+            margin-bottom: .4rem;
+        }
+        .input {
+            background-color: var(--text-input-field);
+            border: none;
+            border-radius: .8rem;
+            height: 3.2rem;
+            font-size: var(--md);
+            padding: .8rem;
+            margin-bottom: 1.2rem;
+        }
+        .primary-button{
+            background-color: var(--hospital-green);
+            border-radius: .8rem;
+            border: none;
+            color: var(--white);
+            text-align: center;
+            width: 100%;
+            cursor: pointer;
+            cursor: hand;
+            font-size: var(--md);
+            font-weight: bold;
+            height: 5rem;
+        }
+        .login-button {
+            margin-top: 1.2rem;
+            margin-bottom: 3.2rem;
+        }
+        @media (max-width: 640px) {
+            .logo {
+                display: block;
+            }
+        }
     </style>
 </head>
 <body>
@@ -43,10 +112,10 @@
 
             <form action="/" class="form">
                 <label for="password" class="label">Password</label>
-                <input type="password" id="password" placeholder="***********" class="input input-password" />
+                <input type="password" id="password" placeholder="**************" class="input input-password" />
 
                 <label for="new-password" class="label">Password</label>
-                <input type="password" id="new-password" placeholder="***********" class="input input-password" />
+                <input type="password" id="new-password" placeholder="**************" class="input input-password" />
 
                 <input type"submit" value="Confirm" class="primary-button login-button">
             </form>
