--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Indie+Flower&family=Quicksand:wght@300;500;700&family=Shadows+Into+Light&family=Silkscreen&display=swap" rel="stylesheet">
     <style>
         :root {
-           --very-light-pink: #c7c7c7;
+           --very-light-pink: #767474;
            --hospital-green: #acd9b2;
            --text-input-field: #f7f7f7;
            --white: #ffffff;
