--- a/login.html
+++ b/login.html
@@ -119,12 +119,12 @@
     </style>
 </head>
 <body>
-    <div class="login">
+    <main class="login">
         <div class="form-container">
             <img src="./Platzi_YardSale_Logos/logo_yard_sale.svg" alt="logo" class="logo" />
             <form action="/" class="form">
                 <label for="email" class="label">Email address</label>
-                <input type="text" id="email" placeholder="youremail@example.com" class="input input-password" />
+                <input type="email" id="email" placeholder="youremail@example.com" class="input input-email" />
 
                 <label for="password" class="label">Password</label>
                 <input type="password" id="password" placeholder="**************" class="input input-password" />
@@ -135,6 +135,6 @@
                 <button class="secondary-button signup-button">Sign up</button>
             </form>
         </div>
-    </div>
+    </main>
 </body>
 </html>
