--- a/new-account.html
+++ b/new-account.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Email Sent</title>
+    <title>New account</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Indie+Flower&family=Quicksand:wght@300;500;700&family=Shadows+Into+Light&family=Silkscreen&display=swap" rel="stylesheet">
@@ -40,7 +40,6 @@
             display: grid;
             grid-template-rows: auto 1fr auto;
             width: 30rem;
-            justify-items: center;
         }
         .logo {
             width: 15rem;
@@ -50,39 +49,30 @@
         }
         .title {
             font-size: var(--lg);
-            margin-bottom: 1.2rem;
-            text-align: center;
-            font-weight: bold;
-        }
-        .subtitle {
-            color: var(--very-light-pink);
-            font-size: var(--md);
-            font-weight: 300;
-            margin-top: 0;
             margin-bottom: 3.2rem;
-            text-align: center;
+            text-align: left;
         }
-        .email-image {
-            width: 100%;
-            height: 13.2rem;
-            border-radius: 50%;
-            background-color: var(--text-input-field);
+
+        .form {
             display: flex;
-            justify-content: center;
-            align-items: center;
+            flex-direction: column;
         }
-        .email-image img {
-            width: 8rem;
-        }
-        .resend {
+        .label {
             font-size: var(--sm);
+            font-weight: bold;
+            margin-bottom: .4rem;
         }
-        .resend span {
-            color: var(--very-light-pink);
+        .input {
+            background-color: var(--text-input-field);
+            border: none;
+            border-radius: .8rem;
+            height: 3.2rem;
+            font-size: var(--md);
+            padding: .8rem;
+            margin-bottom: 1.2rem;
         }
-        .resend a {
-            color: var(--hospital-green);
-            text-decoration: none;
+        .input-name, .input-email, .input-password {
+            margin-bottom: 2.4rem;
         }
         .primary-button{
             background-color: var(--hospital-green);
@@ -105,25 +95,33 @@
             .logo {
                 display: block;
             }
+            .create-button {
+                width: 30rem;
+                position: absolute;
+                bottom: 0;
+                margin-bottom: 24px;
+            }
         }
     </style>
 </head>
 <body>
-    <div class="login">
+    <main class="login">
         <div class="form-container">
-            <img src="./Platzi_YardSale_Logos/logo_yard_sale.svg" alt="logo" class="logo" />
+            <h1 class="title">My account</h1>
 
-            <h1 class="title">Email has been sent!</h1>
-            <h2 class="subtitle">Please check your inbox for instructions on how to reset the password</h2>
-            <div class="email-image">
-                <img src="./Platzi_YardSale_Icons/email.svg" alt="email">
-            </div>
-            <button class="primary-button login-button">Log in</button> 
-            <p class="resend">
-                <span>Didn't receive the email? </span>
-                <a href="/">Resend</a>
-            </p>
+            <form action="/" class="form">
+                <label for="name" class="label">Name</label>
+                <input type="text" id="name" placeholder="Your name" class="input input-name" />
+
+                <label for="email" class="label">Email address</label>
+                <input type="email" id="email" placeholder="youremail@example.com" class="input input-email" />
+
+                <label for="password" class="label">Password</label>
+                <input type="password" id="password" placeholder="**************" class="input input-password" />
+
+                <input type"submit" value="Create account" class="primary-button create-button">
+            </form>
         </div>
-    </div>
+    </main>
 </body>
 </html>
