--- a/login.html
+++ b/login.html
@@ -113,7 +113,7 @@
                 width: 30rem;
                 position: absolute;
                 bottom: 0;
-                margin-bottom: 24px;
+                margin-bottom: 2.4rem;
             }
         }
     </style>
