--- a/homepage.html
+++ b/homepage.html
@@ -94,170 +94,170 @@
             <div class="cards-container">
 
                 <div class="product-card">
-                    <img src="./Products_imgs/skate.jpg" alt="" class="product-img"/>
+                    <img src="./Products_imgs/skate.jpg" alt="skateboard sencilla" class="product-img"/>
                     <div class="product-info">
                         <div>
                             <p>$100.00</p>
                             <p>Skate</p>
                         </div>
                         <figure>
-                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="" />
+                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="Icono de shopping-cart para agregar" />
                         </figure>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="./Products_imgs/skate.jpg" alt="" class="product-img"/>
+                    <img src="./Products_imgs/skate.jpg" alt="skateboard sencilla" class="product-img"/>
                     <div class="product-info">
                         <div>
                             <p>$100.00</p>
                             <p>Skate</p>
                         </div>
                         <figure>
-                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="" />
+                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="Icono de shopping-cart para agregar" />
                         </figure>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="./Products_imgs/skate.jpg" alt="" class="product-img"/>
+                    <img src="./Products_imgs/skate.jpg" alt="skateboard sencilla" class="product-img"/>
                     <div class="product-info">
                         <div>
                             <p>$100.00</p>
                             <p>Skate</p>
                         </div>
                         <figure>
-                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="" />
+                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="Icono de shopping-cart para agregar" />
                         </figure>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="./Products_imgs/skate.jpg" alt="" class="product-img"/>
+                    <img src="./Products_imgs/skate.jpg" alt="skateboard sencilla" class="product-img"/>
                     <div class="product-info">
                         <div>
                             <p>$100.00</p>
                             <p>Skate</p>
                         </div>
                         <figure>
-                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="" />
+                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="Icono de shopping-cart para agregar" />
                         </figure>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="./Products_imgs/skate.jpg" alt="" class="product-img"/>
+                    <img src="./Products_imgs/skate.jpg" alt="skateboard sencilla" class="product-img"/>
                     <div class="product-info">
                         <div>
                             <p>$100.00</p>
                             <p>Skate</p>
                         </div>
                         <figure>
-                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="" />
+                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="Icono de shopping-cart para agregar" />
                         </figure>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="./Products_imgs/skate.jpg" alt="" class="product-img"/>
+                    <img src="./Products_imgs/skate.jpg" alt="skateboard sencilla" class="product-img"/>
                     <div class="product-info">
                         <div>
                             <p>$100.00</p>
                             <p>Skate</p>
                         </div>
                         <figure>
-                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="" />
+                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="Icono de shopping-cart para agregar" />
                         </figure>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="./Products_imgs/skate.jpg" alt="" class="product-img"/>
+                    <img src="./Products_imgs/skate.jpg" alt="skateboard sencilla" class="product-img"/>
                     <div class="product-info">
                         <div>
                             <p>$100.00</p>
                             <p>Skate</p>
                         </div>
                         <figure>
-                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="" />
+                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="Icono de shopping-cart para agregar" />
                         </figure>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="./Products_imgs/skate.jpg" alt="" class="product-img"/>
+                    <img src="./Products_imgs/skate.jpg" alt="skateboard sencilla" class="product-img"/>
                     <div class="product-info">
                         <div>
                             <p>$100.00</p>
                             <p>Skate</p>
                         </div>
                         <figure>
-                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="" />
+                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="Icono de shopping-cart para agregar" />
                         </figure>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="./Products_imgs/skate.jpg" alt="" class="product-img"/>
+                    <img src="./Products_imgs/skate.jpg" alt="skateboard sencilla" class="product-img"/>
                     <div class="product-info">
                         <div>
                             <p>$100.00</p>
                             <p>Skate</p>
                         </div>
                         <figure>
-                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="" />
+                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="Icono de shopping-cart para agregar" />
                         </figure>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="./Products_imgs/skate.jpg" alt="" class="product-img"/>
+                    <img src="./Products_imgs/skate.jpg" alt="skateboard sencilla" class="product-img"/>
                     <div class="product-info">
                         <div>
                             <p>$100.00</p>
                             <p>Skate</p>
                         </div>
                         <figure>
-                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="" />
+                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="Icono de shopping-cart para agregar" />
                         </figure>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="./Products_imgs/skate.jpg" alt="" class="product-img"/>
+                    <img src="./Products_imgs/skate.jpg" alt="skateboard sencilla" class="product-img"/>
                     <div class="product-info">
                         <div>
                             <p>$100.00</p>
                             <p>Skate</p>
                         </div>
                         <figure>
-                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="" />
+                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="Icono de shopping-cart para agregar" />
                         </figure>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="./Products_imgs/skate.jpg" alt="" class="product-img"/>
+                    <img src="./Products_imgs/skate.jpg" alt="skateboard sencilla" class="product-img"/>
                     <div class="product-info">
                         <div>
                             <p>$100.00</p>
                             <p>Skate</p>
                         </div>
                         <figure>
-                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="" />
+                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="Icono de shopping-cart para agregar" />
                         </figure>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="./Products_imgs/skate.jpg" alt="" class="product-img"/>
+                    <img src="./Products_imgs/skate.jpg" alt="skateboard sencilla" class="product-img"/>
                     <div class="product-info">
                         <div>
                             <p>$100.00</p>
                             <p>Skate</p>
                         </div>
                         <figure>
-                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="" />
+                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="Icono de shopping-cart para agregar" />
                         </figure>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="./Products_imgs/skate.jpg" alt="" class="product-img"/>
+                    <img src="./Products_imgs/skate.jpg" alt="skateboard sencilla" class="product-img"/>
                     <div class="product-info">
                         <div>
                             <p>$100.00</p>
                             <p>Skate</p>
                         </div>
                         <figure>
-                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="" />
+                            <img src="./Platzi_YardSale_Icons/bt_add_to_cart.svg" alt="Icono de shopping-cart para agregar" />
                         </figure>
                     </div>
                 </div>
